--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,3 +161,6 @@ footer form{
     text-transform: uppercase;
     color: white;
     text-decoration: none;}
+.qwe{
+    display: inline-block;
+}
