--- a/CSS/style.css
+++ b/CSS/style.css
@@ -165,3 +165,16 @@ footer form{
     display: inline-block;
     background: antiquewhite;
 }
+.btn1{
+    border: 1px solid #7EC4BD;
+    padding: 15px 60px;
+    background: #000000;margin-top: 21px;
+    font-family: 'Vollkorn', serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    text-align: center;
+    color: #8BCAC3;
+    display: inline-block;
+}
