--- a/CSS/style.css
+++ b/CSS/style.css
@@ -164,6 +164,7 @@ footer form{
 .qwe{
     display: inline-block;
     background: antiquewhite;
+    font-size: xx-small;
 }
 .btn1{
     border: 1px solid #7EC4BD;
