--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,24 +161,68 @@ footer form{
     text-transform: uppercase;
     color: white;
     text-decoration: none;}
-.qwe{
-    display: inline-block;
-    background: antiquewhite;
-    font-size: xx-small;
+.main_banner{
+    min-height: 391px;
+    background-image: url("../images/main_banner.jpg");
+    background-size: cover;
+    display: flex;
 }
-.btn1{
-    border: 1px solid #7EC4BD;
-    padding: 15px 60px;
-    background: #000000;margin-top: 21px;
-    font-family: 'Vollkorn', serif;
-    font-style: italic;
+.main_banner h1{
+    font-family: 'montserratregular';
+    font-style: normal;
     font-weight: 400;
-    font-size: 17px;
-    line-height: 22px;
+    font-size: 44px;
+    line-height: 55px;
     text-align: center;
-    color: #8BCAC3;
-    display: inline-block;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
-.qqq111{
-    font-size: larger;
+.main_banner p{
+    font-family: 'Vollkorn', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.81);
+}
+.main_banner h1:after {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 2px;
+    background-color: #FFFFFF;
+    margin: auto;
+    margin-top: 28px;
+    margin-bottom: 25px;
+}
+.main_banner_description{
+    background-color: #FEFEC9;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+}
+.main_banner_description p{
+    font-family: 'Vollkorn', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #47474F;
+    margin-bottom: 39px;
+}
+.main_banner_description a{
+    font-family: 'Vollkorn', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #47474F;
+    display: inline-block;
+    padding: 13px 34px 20px;
+    border: solid 1px #47474F;
+    border-bottom: solid 2px #47474F;
+    text-decoration: none;
 }
