--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ header nav li{
     margin-left: 34px
 }
 header nav li a{
-    font-family: 'montserratregular';
+    font-family: 'montserratregular', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -168,7 +168,7 @@ footer form{
     display: flex;
 }
 .main_banner h1{
-    font-family: 'montserratregular';
+    font-family: 'montserratregular', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 44px;
@@ -225,4 +225,111 @@ footer form{
     border: solid 1px #47474F;
     border-bottom: solid 2px #47474F;
     text-decoration: none;
+}
+.brands{
+    text-align: center;
+}
+.brands_title{
+    font-family: 'montserratregular', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 36px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #333333;
+    padding-top: 69px;
+}
+.brands_title:after{
+    content: "";
+    display: block;
+    width: 80px;
+    height: 2px;
+    background-color: rgb(0, 0, 0, 0.09);
+    margin: auto;
+    margin-top: 28px;
+    margin-bottom: 43px;
+}
+.brands_h{
+    font-family: 'montserratregular', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #333333;
+}
+.brands h4{
+    text-transform: uppercase;
+    padding-top: 38px;
+}
+.brands_img{
+    margin-left: 20px;
+}
+.brands_p{
+    font-family: 'Vollkorn', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    color: #333333;
+    padding-top: 20px;
+    padding-bottom: 74px;
+}
+.project_title{
+    font-family: 'montserratregular', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 36px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #333333;
+    padding-top: 79px;
+}
+.project{
+    background-color: #F5F5F5;
+    text-align: center;
+}
+.project_title:after{
+    content: "";
+    display: block;
+    width: 80px;
+    height: 2px;
+    background-color: rgb(0, 0, 0, 0.09);
+    margin: auto;
+    margin-top: 28px;
+    margin-bottom: 43px;
+}
+.project article{
+    background-color: #FFFFFF;
+}
+.project h4{
+    font-family: 'montserratregular', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #333333;
+    padding-top: 19px;
+}
+.project p{
+    font-family: 'Vollkorn', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #333333;
+    padding-bottom: 21px;
+}
+.project_pictures2, .project_pictures3{
+    margin-top: 20px;
+}
+.project_pictures3{
+    margin-bottom: 89px;
 }
