JS+owl-carousel

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -312,6 +312,7 @@ footer form{
     text-transform: uppercase;
     color: #333333;
     padding-top: 19px;
+    padding-top: 113px;
 }
 .project p{
     font-family: 'Vollkorn', serif;
