--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,3 @@
-@font-face {
-    font-family: 'montserratregular';
-    src: url('../fonts/montserrat-regular-webfont.eot');
-    src: url('../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
-    url('../fonts/montserrat-regular-webfont.woff') format('woff'),
-    url('../fonts/montserrat-regular-webfont.ttf') format('truetype'),
-    url('../fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 *{
     padding: 0;
     margin: 0;
@@ -340,3 +329,38 @@ footer form{
     align-items: center;
     flex-wrap: wrap;
 }
+/*@keyframes crazy {*/
+/*    0%{*/
+/*        left: 0;*/
+/*        top: 0;*/
+/*    }*/
+/*    20%{*/
+/*        left: 20px;*/
+/*        top: 20px;*/
+/*        transform: rotate(180deg);*/
+/*    }*/
+/*    50%{*/
+/*        left: 200px;*/
+/*        top: 200px;*/
+/*        transform: rotate(0deg);*/
+/*        background-color: yellow;*/
+/*    }*/
+/*    70%{*/
+/*        left: 100px;*/
+/*        top: 100px;*/
+/*        transform: rotate(180deg);*/
+/*    }*/
+/*    100%{*/
+/*        left: 0;*/
+/*        top: 0;*/
+/*        transform: rotate(0deg);*/
+/*    }*/
+/*    }*/
+/*.box{*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    position: absolute;*/
+/*    background-color: #7EC4BD;*/
+/*    z-index: 10;*/
+/*    animation: crazy 2s infinite    ;*/
+/*}*/
