--- a/CSS/Preprocess.css
+++ b/CSS/Preprocess.css
@@ -438,6 +438,11 @@ footer form {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 520px) {
+  .comments {
+    max-height: 700px;
+  }
+}
 
 .comments_right_h3 {
   font-family: "Vollkorn", serif;
