--- a/CSS/Preprocess.css
+++ b/CSS/Preprocess.css
@@ -35,6 +35,11 @@ header li a:hover {
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (max-width: 970px) {
+  .d_flex {
+    justify-content: space-around;
+  }
+}
 
 #navbar {
   list-style: none;
@@ -222,6 +227,11 @@ footer form {
   padding-bottom: 60px;
   text-align: center;
 }
+@media screen and (max-width: 900px) {
+  .main_banner_description {
+    padding: 40px 20px;
+  }
+}
 .main_banner_description p {
   font-family: "Vollkorn", serif;
   font-style: normal;
@@ -249,6 +259,11 @@ footer form {
 
 .brands {
   text-align: center;
+}
+@media screen and (max-width: 900px) {
+  .brands {
+    margin: 0 20px;
+  }
 }
 .brands h4 {
   text-transform: uppercase;
@@ -356,6 +371,11 @@ footer form {
 .project_pictures2, .project_pictures3 {
   margin-top: 20px;
 }
+@media screen and (max-width: 900px) {
+  .project_pictures2, .project_pictures3 {
+    margin-top: 0;
+  }
+}
 
 .project_pictures3 {
   margin-bottom: 89px;
@@ -370,6 +390,16 @@ footer form {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+}
+@media screen and (max-width: 900px) {
+  .flex_container_project {
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 600px) {
+  .flex_container_project {
+    justify-content: center;
+  }
 }
 
 .team {
@@ -438,9 +468,9 @@ footer form {
   display: flex;
   justify-content: space-between;
 }
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 660px) {
   .comments {
-    max-height: 700px;
+    max-height: 100%;
   }
 }
 
@@ -454,6 +484,16 @@ footer form {
   color: #333333;
   padding: 196px 52px 24px 0;
 }
+@media screen and (max-width: 600px) {
+  .comments_right_h3 {
+    padding: 156px 0 24px 0;
+  }
+}
+@media screen and (max-width: 400px) {
+  .comments_right_h3 {
+    padding: 156px 0 24px 30px;
+  }
+}
 
 .comments_left_h4 {
   font-family: "Vollkorn", serif;
@@ -464,6 +504,11 @@ footer form {
   text-align: center;
   color: #333333;
   padding: 196px 0 24px 0;
+}
+@media screen and (max-width: 670px) {
+  .comments_left_h4 {
+    padding: 40px 0 24px 0;
+  }
 }
 
 .comments_name_right {
@@ -489,10 +534,22 @@ footer form {
   color: #ABABAB;
   padding-top: 10px;
 }
+@media screen and (max-width: 600px) {
+  .comments_name_left {
+    padding-bottom: 30px;
+  }
+}
 
 .flex_container_comments {
   display: flex;
   text-align: center;
+}
+@media screen and (max-width: 700px) {
+  .flex_container_comments {
+    flex-wrap: wrap;
+    max-width: 100%;
+    justify-content: center;
+  }
 }
 
 .line_comment {
@@ -507,6 +564,11 @@ footer form {
   margin-top: 141px;
   margin-bottom: 98px;
 }
+@media screen and (max-width: 700px) {
+  .line_comment {
+    display: none;
+  }
+}
 
 .fix_img {
   position: absolute;
@@ -516,6 +578,16 @@ footer form {
   margin-right: -50px;
   margin-top: 69px;
 }
+@media screen and (max-width: 670px) {
+  .fix_img {
+    right: 55%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .fix_img {
+    right: 57%;
+  }
+}
 
 .lets {
   background-image: url("../images/background_lets.jpg");
@@ -524,12 +596,8 @@ footer form {
   min-height: 600px;
   position: relative;
 }
-@media screen and (max-width: 768px) {
-  .lets {
-    flex-direction: column;
-  }
-}
-.lets article {
+
+article {
   margin-right: 25px;
 }
 
@@ -578,6 +646,11 @@ footer form {
   text-align: center;
   color: #212121;
 }
+@media screen and (max-width: 470px) {
+  .geo_p {
+    padding-bottom: 20px;
+  }
+}
 
 .lets_mail_h4 {
   font-family: "Montserrat", sans-serif;
@@ -612,6 +685,11 @@ footer form {
   text-align: center;
   color: #212121;
   padding-bottom: 75px;
+}
+@media screen and (max-width: 470px) {
+  .lets_mail_p2 {
+    padding-bottom: 20px;
+  }
 }
 
 .lets_social_h4 {
@@ -653,6 +731,27 @@ footer form {
 
 .fix2 {
   padding-top: 18px;
+  margin-left: 25px;
+}
+@media screen and (max-width: 470px) {
+  .fix2 {
+    margin-left: 175px;
+  }
+}
+@media screen and (max-width: 470px) and (max-width: 440px) {
+  .fix2 {
+    margin-left: 165px;
+  }
+}
+@media screen and (max-width: 470px) and (max-width: 410px) {
+  .fix2 {
+    margin-left: 155px;
+  }
+}
+@media screen and (max-width: 470px) and (max-width: 390px) {
+  .fix2 {
+    margin-left: 125px;
+  }
 }
 .fix2:before {
   content: "";
@@ -666,6 +765,11 @@ footer form {
 .fix3 {
   padding-top: 18px;
 }
+@media screen and (max-width: 470px) {
+  .fix3 {
+    padding-bottom: 20px;
+  }
+}
 .fix3:before {
   content: "";
   display: inline-block;
@@ -677,6 +781,17 @@ footer form {
 
 .lets article {
   max-height: 100px;
+}
+@media screen and (max-width: 470px) {
+  .lets article {
+    width: 100%;
+    max-height: 100%;
+  }
+}
+@media screen and (max-width: 470px) {
+  .lets .d_flex {
+    flex-wrap: wrap;
+  }
 }
 
 /*# sourceMappingURL=Preprocess.css.map */
