--- a/CSS/Preprocess.css
+++ b/CSS/Preprocess.css
@@ -229,7 +229,7 @@ footer form {
 }
 @media screen and (max-width: 900px) {
   .main_banner_description {
-    padding: 40px 20px;
+    padding: 60px 20px;
   }
 }
 .main_banner_description p {
@@ -364,21 +364,26 @@ footer form {
   padding-top: 4px;
 }
 
-.project article {
+.project {
   background-color: #FFFFFF;
+}
+@media screen and (max-width: 900px) {
+  .project article {
+    margin-top: 10px;
+  }
 }
 
 .project_pictures2, .project_pictures3 {
   margin-top: 20px;
 }
-@media screen and (max-width: 900px) {
-  .project_pictures2, .project_pictures3 {
-    margin-top: 0;
-  }
-}
 
 .project_pictures3 {
   margin-bottom: 89px;
+}
+@media screen and (max-width: 900px) {
+  .project_pictures3 {
+    margin-bottom: 0;
+  }
 }
 
 .brands_article {
@@ -573,6 +578,7 @@ footer form {
 .fix_img {
   position: absolute;
   align-items: center;
+  text-align: center;
   justify-content: center;
   right: 50%;
   margin-right: -50px;
@@ -595,10 +601,6 @@ footer form {
   text-align: center;
   min-height: 600px;
   position: relative;
-}
-
-article {
-  margin-right: 25px;
 }
 
 .lets_title {
